@@ -1,6 +1,6 @@
 ## automake - create Makefile.in from Makefile.am
-## Copyright (C) 1999, 2001, 2003, 2004, 2006, 2007, 2008, 2009  Free
-## Software Foundation, Inc.
+## Copyright (C) 1999, 2001, 2003, 2004, 2006, 2007, 2008, 2009, 2011
+## Free Software Foundation, Inc.
 
 ## This program is free software; you can redistribute it and/or modify
 ## it under the terms of the GNU General Public License as published by
@@ -24,6 +24,7 @@ endif %?INSTALL%
 ## ------------ ##
 
 if %?INSTALL%
+?FIRST?am__py_compile = PYTHON=$(PYTHON) $(SHELL) $(py_compile)
 am__installdirs += "$(DESTDIR)$(%NDIR%dir)"
 .PHONY install-%EXEC?exec:data%-am: install-%DIR%PYTHON
 install-%DIR%PYTHON: $(%DIR%_PYTHON)
@@ -53,9 +54,10 @@ if %?BASE%
 ## encoded in the actual files.
 	if test -n "$$dlist"; then \
 	  if test -z "$(DESTDIR)"; then \
-	    PYTHON=$(PYTHON) $(py_compile) --basedir "$(%NDIR%dir)" $$dlist; \
+	    $(am__py_compile) --basedir "$(%NDIR%dir)" $$dlist; \
 	  else \
-	    PYTHON=$(PYTHON) $(py_compile) --destdir "$(DESTDIR)" --basedir "$(%NDIR%dir)" $$dlist; \
+	    $(am__py_compile) --destdir "$(DESTDIR)" \
+	                      --basedir "$(%NDIR%dir)" $$dlist; \
 	  fi; \
 	else :; fi
 else !%?BASE%
@@ -77,9 +79,10 @@ else !%?BASE%
 ## encoded in the actual files.
 	  if test -n "$$dlist"; then \
 	    if test -z "$(DESTDIR)"; then \
-	      PYTHON=$(PYTHON) $(py_compile) --basedir "$(%NDIR%dir)" $$dlist; \
+	      $(am__py_compile) --basedir "$(%NDIR%dir)" $$dlist; \
 	    else \
-	      PYTHON=$(PYTHON) $(py_compile) --destdir "$(DESTDIR)" --basedir "$(%NDIR%dir)" $$dlist; \
+	      $(am__py_compile) --destdir "$(DESTDIR)" \
+	                        --basedir "$(%NDIR%dir)" $$dlist; \
 	    fi; \
 	  else :; fi \
 	done
