@@ -1,3 +1,11 @@
+2011-06-08  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	python: run the 'py-compile' script with $(SHELL)
+	* lib/python.am (install-%DIR%PYTHON): Run each instance of
+	py-compile using $(SHELL).  Since we are at it, break overly
+	long lines.
+	(am__py_compile): New variable, to reduce code duplication.
+
 2011-06-02  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	maintcheck: fix some failures, extend some checks
